--- a/src/style/style.css
+++ b/src/style/style.css
@@ -340,14 +340,18 @@ input {
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  text-transform: uppercase;
 }
 .footer_left {
   display: flex;
   flex-direction: column;
 }
 .footer_right {
+  display: flex;
+  flex-direction: row;
   gap: 40px;
+}
+.footer__text_big{
+text-transform: uppercase;
 }
 .center {
   font-family: Roboto;
@@ -355,4 +359,38 @@ font-size: 16px;
 font-style: normal;
 font-weight: 400;
 line-height: 140%;
+}
+.container_rewies {
+  display: flex;
+  flex-direction: column;
+}
+.reviews_wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 32px;
+}
+.review {
+  max-width: 445px;
+  height: 327px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  border: 1px solid #000;
+  background: #FFF;
+  align-items: center;
+}
+.surname {
+  color: #212529;
+font-family: Helvetica;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+margin-top: 32px;
+}
+.review_descr {
+  margin-top: 20px;
 }
