--- a/src/style/style.css
+++ b/src/style/style.css
@@ -23,6 +23,7 @@
 a {
   text-decoration: none;
   color: inherit;
+  transition: 0.3s;
 }
 a:hover {
   color: #DDD7C0;
@@ -257,6 +258,7 @@ h3 {
   background: lightgray;
   object-fit: cover;
   object-position: center;
+  position: relative;
  }
 .projects_up {
   display: flex;
@@ -410,4 +412,28 @@ margin-top: 32px;
 }
 .review_descr {
   margin-top: 20px;
+}
+.info {
+  background-color: rgba(33, 37, 41, 0.50);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: absolute;
+  width: 445px;
+  height: 66px;
+  bottom: 0;
+  padding: 22px 27px 22px 20px;
+  z-index: 10;
+  opacity: 0;
+  transition: 0.3s;
+}
+.info_text {
+color: #FFF;
+font-family: "Roboto", sans-serif;
+font-size: 16px;
+font-weight: 400;
+line-height: 140%;
+}
+.info:hover {
+  opacity: 1;
 }
